# acex

./: .gitignore  AGENTS.md  Cargo.toml  GOAL.md  README.md  SOUL.md  plan.html
.github/: CODEOWNERS
.github/workflows/: ledger.yml  verify.yml
crates/acex/: Cargo.toml
crates/acex-config/: Cargo.toml
crates/acex-config/src/: lib.rs
crates/acex-discover/: Cargo.toml
crates/acex-discover/src/: lib.rs
crates/acex-editor/: Cargo.toml
crates/acex-editor/src/: lib.rs
crates/acex-model/: Cargo.toml
crates/acex-model/src/: intent.rs  lib.rs
crates/acex-ui/: Cargo.toml
crates/acex-ui/src/: lib.rs  palette.rs
crates/acex/src/: checkpoint_status.rs  main.rs  sync_util.rs  worker.rs
crates/herdr-client/: Cargo.toml
crates/herdr-client/examples/: pipe_probe.rs  sub_probe.rs
crates/herdr-client/src/: lib.rs  ndjson.rs  ops.rs  resolve.rs  stream.rs  subscribe.rs  transport.rs
crates/herdr-client/tests/: live_herdr.rs
crates/herdr-types/: Cargo.toml
crates/herdr-types/schemas/: herdr-api.schema.json
crates/herdr-types/src/: lib.rs
docs/: ARCHITECTURE.md  EXTENDING.md  IMPROVEMENT_PLAN.md  PHILOSOPHY_PI.md  REPO_PROTECTION.md  VERIFY.md  checkpoint-ledger.jsonl  tracker.html
docs/artifacts/: README.md
docs/biographies/: AGENTS.md  GOAL.md  INDEX.md  SOUL.md  acex-bin.md  acex-config.md  acex-discover.md  acex-editor.md  acex-model.md  acex-ui.md  checkpoint-ledger.md  checkpoint-status-schema.md  codeowners.md  herdr-client.md  herdr-types.md  improvement-plan.md  ledger-ci.md  ledger-validator.md  omp-pr-loop.md  repo-protection.md  schema.md  skill.md  tracker.md  verify-ci.md  verify-pr.md
docs/schemas/: acex-checkpoint-status.schema.json
scripts/: check-ledger-append-only.py  omp-pr-loop.ps1  omp-pr-loop.sh  verify-pr.sh
skills/acex-dev/: SKILL.md
