[workspace]
resolver = "2"
members = [
    "crates/herdr-types",
    "crates/herdr-client",
    "crates/acex-model",
    "crates/acex-ui",
    "crates/acex-editor",
    "crates/acex-config",
    "crates/acex-discover",
    "crates/acex",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/local/acex"
rust-version = "1.75"

[workspace.dependencies]
herdr-types = { path = "crates/herdr-types" }
herdr-client = { path = "crates/herdr-client" }
acex-model = { path = "crates/acex-model" }
acex-ui = { path = "crates/acex-ui" }
acex-editor = { path = "crates/acex-editor" }
acex-config = { path = "crates/acex-config" }
acex-discover = { path = "crates/acex-discover" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time", "process", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
ratatui = "0.29"
crossterm = "0.28"
dirs = "6"
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"

sha2 = "0.10"
toml = "0.8"
