[package]
name = "acex-config"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "acex configuration: session, socket, editor, presets, keybinds"

[dependencies]
acex-model = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = "3"

