[package]
name = "acex"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "acex binary — agent control-plane experience"
default-run = "acex"

[[bin]]
name = "acex"
path = "src/main.rs"

[dependencies]
acex-ui = { workspace = true }
acex-model = { workspace = true }
acex-config = { workspace = true }
acex-editor = { workspace = true }
acex-discover = { workspace = true }
herdr-client = { workspace = true }
herdr-types = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = "3"
